// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<SafeAreaProvider>
  <TRenderEngineProvider
    baseStyle={
      {
        "fontSize": 14,
      }
    }
    classesStyles={{}}
    customHTMLElementModels={{}}
    emSize={14}
    enableCSSInlineProcessing={true}
    enableUserAgentStyles={true}
    fallbackFonts={
      {
        "monospace": "Menlo",
        "sans-serif": "system",
        "serif": "Times New Roman",
      }
    }
    htmlParserOptions={
      {
        "decodeEntities": true,
      }
    }
    ignoredDomTags={[]}
    ignoredStyles={[]}
    systemFonts={
      [
        "San Francisco",
        "Arial",
        "ArialHebrew",
        "Avenir",
        "Baskerville",
        "Bodoni 72",
        "Bradley Hand",
        "Chalkboard SE",
        "Cochin",
        "Copperplate",
        "Courier",
        "Courier New",
        "Damascus",
        "Didot",
        "Futura",
        "Geeza Pro",
        "Georgia",
        "Gill Sans",
        "Helvetica",
        "Helvetica Neue",
        "Hiragino Sans",
        "Hoefler Text",
        "Iowan Old Style",
        "Kailasa",
        "Khmer Sangam MN",
        "Marker Felt",
        "Menlo",
        "Mishafi",
        "Noteworthy",
        "Optima",
        "Palatino",
        "Papyrus",
        "Savoye LET",
        "Symbol",
        "Thonburi",
        "Times New Roman",
        "Trebuchet MS",
        "Verdana",
        "Zapf Dingbats",
        "Zapfino",
      ]
    }
    tagsStyles={{}}
  >
    <Provider
      store={
        {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <HyloHTMLConfigProvider>
        <ForwardRef(NavigationContainerInner)>
          <Comment
            comment={
              {
                "creator": {
                  "avatarUrl": "foo.png",
                  "name": "Ishamel",
                },
                "id": 1,
                "text": "tick followed tock followed tick followed tock",
              }
            }
            deleteComment={[MockFunction]}
            handleReply={[MockFunction]}
          />
        </ForwardRef(NavigationContainerInner)>
      </HyloHTMLConfigProvider>
    </Provider>
  </TRenderEngineProvider>
</SafeAreaProvider>
`;

exports[`shows the post title when displayPostTitle is true 1`] = `
<SafeAreaProvider>
  <TRenderEngineProvider
    baseStyle={
      {
        "fontSize": 14,
      }
    }
    classesStyles={{}}
    customHTMLElementModels={{}}
    emSize={14}
    enableCSSInlineProcessing={true}
    enableUserAgentStyles={true}
    fallbackFonts={
      {
        "monospace": "Menlo",
        "sans-serif": "system",
        "serif": "Times New Roman",
      }
    }
    htmlParserOptions={
      {
        "decodeEntities": true,
      }
    }
    ignoredDomTags={[]}
    ignoredStyles={[]}
    systemFonts={
      [
        "San Francisco",
        "Arial",
        "ArialHebrew",
        "Avenir",
        "Baskerville",
        "Bodoni 72",
        "Bradley Hand",
        "Chalkboard SE",
        "Cochin",
        "Copperplate",
        "Courier",
        "Courier New",
        "Damascus",
        "Didot",
        "Futura",
        "Geeza Pro",
        "Georgia",
        "Gill Sans",
        "Helvetica",
        "Helvetica Neue",
        "Hiragino Sans",
        "Hoefler Text",
        "Iowan Old Style",
        "Kailasa",
        "Khmer Sangam MN",
        "Marker Felt",
        "Menlo",
        "Mishafi",
        "Noteworthy",
        "Optima",
        "Palatino",
        "Papyrus",
        "Savoye LET",
        "Symbol",
        "Thonburi",
        "Times New Roman",
        "Trebuchet MS",
        "Verdana",
        "Zapf Dingbats",
        "Zapfino",
      ]
    }
    tagsStyles={{}}
  >
    <Provider
      store={
        {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <HyloHTMLConfigProvider>
        <ForwardRef(NavigationContainerInner)>
          <Comment
            comment={
              {
                "creator": {
                  "avatarUrl": "foo.png",
                  "name": "Ishamel",
                },
                "id": 1,
                "post": {
                  "id": 23,
                  "title": "What's good? A long enough post title to be a bit truncated thanks",
                },
                "text": "tick followed tock followed tick followed tock",
              }
            }
            displayPostTitle={true}
            handleReply={[MockFunction]}
          />
        </ForwardRef(NavigationContainerInner)>
      </HyloHTMLConfigProvider>
    </Provider>
  </TRenderEngineProvider>
</SafeAreaProvider>
`;
